# vnv

./: .gitignore  Cargo.toml
client/: Cargo.toml  build.rs  config.json
client/src/: main.rs  wm.rs
server/: Cargo.toml
server/migrations/: 00000000000001_users.sql
server/src/: main.rs  models.rs  user.rs  web.rs
server/templates/: base.html  guide.html  root.html
