[package]
name = "vnv-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "macros", "runtime-tokio"] }
tokio = { version = "1.35", features = ["full"] }
jsonwebtoken = "9.2"
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
